[package]
name = "device-envoy-rp-blinky"
version = "0.0.6-alpha.0"
edition = "2024"

[features]
default = ["pico1"]
pico1 = ["device-envoy-rp/pico1", "embassy-rp/rp2040"]
pico2 = ["device-envoy-rp/pico2", "embassy-rp/rp235xb"]
wifi = ["device-envoy-rp/wifi"]

[dependencies]
device-envoy-rp = { version = "0.0.6-alpha.0", default-features = false, features = ["arm"] }
embassy-executor = { version = "0.10.0", default-features = false, features = ["executor-thread", "platform-cortex-m"] }
embassy-rp = { version = "0.10.0", default-features = false, features = ["rt", "defmt", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
defmt = "0.3.10"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m-rt = "0.7.5"
heapless = "0.9.2"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
